--- a/src/app/pages/costos-anuales copy/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales copy/costos-anuales.component.html
@@ -508,13 +508,13 @@
                         <dxi-column caption="{{myCompania +' - '+ myUdN}}" >
                             <dxi-column dataField="concepto" caption="Concepto"></dxi-column>
                             <dxi-column dataField="real" caption="REAL" [format]="separator"></dxi-column>
-                            <dxi-column dataField="realP" caption="%"></dxi-column>
+                            <dxi-column dataField="realP" caption="%" format="percent"></dxi-column>
                             <dxi-column dataField="presupuesto" caption="PRESUP" [format]="separator"></dxi-column>
-                            <dxi-column dataField="presupuestoP" caption="%"></dxi-column>
+                            <dxi-column dataField="presupuestoP" caption="%" format="percent"></dxi-column>
                             <dxi-column dataField="realA" caption="REAL ACUM" [format]="separator"></dxi-column>
-                            <dxi-column dataField="realAP" caption="%"></dxi-column>
+                            <dxi-column dataField="realAP" caption="%" format="percent"></dxi-column>
                             <dxi-column dataField="presA" caption="PRESUP ACUM" [format]="separator"></dxi-column>
-                            <dxi-column dataField="presAP" caption="%"></dxi-column>
+                            <dxi-column dataField="presAP" caption="%" format="percent"></dxi-column>
                         </dxi-column>
                         <!-- <dxi-column dataField="periodo" caption="Periodo"  headerCellTemplate="headerTemplate"></dxi-column>
                         <dxi-column dataField="renglon" caption="Renglon" headerCellTemplate="headerTemplate"></dxi-column> -->
