--- a/src/app/pages/indicadores/indicadores.component.scss
+++ b/src/app/pages/indicadores/indicadores.component.scss
@@ -5,22 +5,22 @@
     font-size: 14px;
   }
 
-  #gridContainer .dx-scrollbar-horizontal.dx-scrollbar-hoverable {
+::ng-deep .dx-scrollbar-horizontal.dx-scrollbar-hoverable {
     height: 15px;
 }
 
-#gridContainer .dx-scrollbar-vertical.dx-scrollbar-hoverable {
+::ng-deep .dx-scrollbar-vertical.dx-scrollbar-hoverable {
     width: 15px;
 }
 
-#gridContainer .dx-scrollbar-horizontal .dx-scrollable-scroll { 
+::ng-deep .dx-scrollbar-horizontal .dx-scrollable-scroll { 
     height: 15px; 
 }
 
-#gridContainer .dx-scrollbar-vertical .dx-scrollable-scroll { 
+::ng-deep .dx-scrollbar-vertical .dx-scrollable-scroll { 
     width: 15px; 
 }
 
-#gridContainer .dx-scrollable-scroll-content { 
-    background-color:green !important; /* optional if you want to change the color */
+::ng-deep .dx-scrollable-scroll-content { 
+    background-color:gray !important; /* optional if you want to change the color */
 }
